# rust-actix.api-postgres

./: README.md  dev.sh  docker-compose.yml
backend/: .env  Cargo.toml  Dockerfile  database.sql  seed.sh
backend/src/: handlers.rs  models.rs
backend/todo-actix/: Cargo.toml
backend/todo-actix/src/: main.rs  models.rs
